# contextune

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  SECURITY.md  codecov.yml
.github/workflows/: README.md  ci.yml  performance.yml  release.yml  security.yml
.kiro/specs/music-player-plugin/: design.md  requirements.md  tasks.md  technology-research.md
.kiro/specs/native-library-loading-fix/: design.md  requirements.md  tasks.md
core/: Cargo.toml  build.rs  deny.toml  exports.map
core/benches/: audio_pipeline.rs
core/examples/: audio_checksum.rs  generate_test_audio.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: ffi_safety.rs
core/src/: error.rs  lib.rs
core/src/ai/: classifier.rs  features.rs  mod.rs  model.rs
core/src/audio/: buffer.rs  checksum.rs  decoder.rs  engine.rs  format.rs  mod.rs  output.rs  processor.rs  ring_buffer.rs
core/src/cue/: mod.rs  parser.rs  sheet.rs  virtual_track.rs
core/src/ffi/: c_api.rs  jni.rs  mod.rs  playlist_api.rs  types.rs
core/src/playlist/: manager.rs  mod.rs  queue.rs  smart.rs
core/src/state/: mod.rs  persistence.rs  playback.rs
core/src/streaming/: http.rs  mod.rs  qq_music.rs
core/test_data/reference/: README.md
core/tests/: aac_alac_decoding.rs  audio_quality.rs  bit_perfect_verification.rs  cue_parser_comprehensive.rs  cue_seeking_accuracy.rs  ffi_integration.rs  frequency_response.rs  memory_leak_detection.rs  ring_buffer_concurrency.rs  thd_n_measurement.rs
docs/: CHANGELOG_AUDIO_SETUP.md  audio-testing-setup.md  development-setup.md  github-setup.md  local-testing.md  memory-safety-testing.md  performance-testing.md
intellij-plugin/: .gitignore  CHANGELOG.md  LOCAL_TESTING_GUIDE.md  PHASE_3.1_VERIFICATION.md  PHASE_3.2_SUMMARY.md  PHASE_3.3_SUMMARY.md  PHASE_3.4_3.5_SUMMARY.md  PHASE_3.6_3.7_3.8_SUMMARY.md  PHASE_4.1_4.2_SUMMARY.md  PHASE_4.3_SUMMARY.md  PROJECT_STATUS.md  README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
intellij-plugin/gradle/: libs.versions.toml
intellij-plugin/src/main/kotlin/com/contextune/plugin/: MusicPlayerPlugin.kt
intellij-plugin/src/main/kotlin/com/contextune/plugin/actions/: MuteAction.kt  NextTrackAction.kt  PlayPauseAction.kt  PreviousTrackAction.kt  StopAction.kt  VolumeDownAction.kt  VolumeUpAction.kt
intellij-plugin/src/main/kotlin/com/contextune/plugin/audio/: RustAudioEngine.kt
intellij-plugin/src/main/kotlin/com/contextune/plugin/services/: ErrorNotificationService.kt  LibraryService.kt  PlaybackService.kt  PlaylistService.kt
intellij-plugin/src/main/kotlin/com/contextune/plugin/settings/: MusicPlayerConfigurable.kt
intellij-plugin/src/main/kotlin/com/contextune/plugin/state/: PlayerState.kt
intellij-plugin/src/main/kotlin/com/contextune/plugin/ui/: MusicPlayerPanel.kt  MusicPlayerToolWindowFactory.kt  PlaylistDragDropHandler.kt  PlaylistView.kt
intellij-plugin/src/main/kotlin/com/contextune/plugin/utils/: JNAConfigurationManager.kt  NativeLibraryLoader.kt  PlatformLibraryResolver.kt  TemporaryLibraryManager.kt
intellij-plugin/src/main/kotlin/com/contexture/plugin/: MusicPlayerPlugin.kt
intellij-plugin/src/main/kotlin/com/contexture/plugin/actions/: MuteAction.kt  NextTrackAction.kt  PlayPauseAction.kt  PreviousTrackAction.kt  StopAction.kt  VolumeDownAction.kt  VolumeUpAction.kt
intellij-plugin/src/main/kotlin/com/contexture/plugin/audio/: RustAudioEngine.kt
intellij-plugin/src/main/kotlin/com/contexture/plugin/services/: LibraryService.kt  PlaybackService.kt  PlaylistService.kt
intellij-plugin/src/main/kotlin/com/contexture/plugin/settings/: MusicPlayerConfigurable.kt
intellij-plugin/src/main/kotlin/com/contexture/plugin/ui/: MusicPlayerPanel.kt  MusicPlayerToolWindowFactory.kt
intellij-plugin/src/main/kotlin/com/contexture/plugin/utils/: NativeLibraryLoader.kt
intellij-plugin/src/main/resources/icons/: README.md
intellij-plugin/src/test/kotlin/com/contextune/plugin/audio/: RustAudioEngineTest.kt
intellij-plugin/src/test/kotlin/com/contextune/plugin/services/: ErrorNotificationServiceTest.kt  PlaybackServiceTest.kt
intellij-plugin/src/test/kotlin/com/contextune/plugin/state/: PlayerStateTest.kt
intellij-plugin/src/test/kotlin/com/contextune/plugin/ui/: MusicPlayerPanelTest.kt  PlaylistViewTest.kt
intellij-plugin/src/test/kotlin/com/contextune/plugin/utils/: NativeLibraryLoaderTest.kt
intellij-plugin/src/test/kotlin/com/contexture/plugin/audio/: RustAudioEngineTest.kt
scripts/: README.md  analyze-benchmarks.py  benchmark-regression.sh  ci-local.sh  coverage-report.sh  pre-commit  run-asan-tests.sh  run-fuzz-tests.sh  run-msan-tests.sh  run-valgrind-tests.sh  security-scan.sh  setup_audio.sh  visualize-benchmarks.py
(+5 files in other folders)
